feat: Add VIX calculation module including data loading, computation, and database inspection utilities.

--- a/settings.yaml
+++ b/settings.yaml
@@ -2725,6 +2725,7 @@ finance:
       - ts_code
       - end_date
       - bz_item
+      - bz_code
       - bz_sales
       - bz_profit
       - bz_cost
