feat: Add monthly data validation, flexible API date parameters, and `cn_pmi` support.

--- a/settings.yaml
+++ b/settings.yaml
@@ -2039,6 +2039,79 @@ marco:
       date_type: natural
       date_param: date
       date_param_mode: range
+    cn_pmi:
+      unique_keys:
+      - month
+      fields:
+      - month
+      - pmi010000
+      - pmi010100
+      - pmi010200
+      - pmi010300
+      - pmi010400
+      - pmi010401
+      - pmi010402
+      - pmi010403
+      - pmi010500
+      - pmi010501
+      - pmi010502
+      - pmi010503
+      - pmi010600
+      - pmi010601
+      - pmi010602
+      - pmi010603
+      - pmi010700
+      - pmi010701
+      - pmi010702
+      - pmi010703
+      - pmi010800
+      - pmi010801
+      - pmi010802
+      - pmi010803
+      - pmi010900
+      - pmi011000
+      - pmi011100
+      - pmi011200
+      - pmi011300
+      - pmi011400
+      - pmi011500
+      - pmi011600
+      - pmi011700
+      - pmi011800
+      - pmi011900
+      - pmi012000
+      - pmi020100
+      - pmi020101
+      - pmi020102
+      - pmi020200
+      - pmi020201
+      - pmi020202
+      - pmi020300
+      - pmi020301
+      - pmi020302
+      - pmi020400
+      - pmi020401
+      - pmi020402
+      - pmi020500
+      - pmi020501
+      - pmi020502
+      - pmi020600
+      - pmi020601
+      - pmi020602
+      - pmi020700
+      - pmi020800
+      - pmi020900
+      - pmi021000
+      - pmi030000
+      earliest_date: '200501'
+      limit: 1000
+      date_column: month
+      date_type: natural
+      date_param: month
+      date_param_mode: range
+      start_param: start_m
+      end_param: end_m
+      api_date_format: YYYYMM
     us_tycr:
       unique_keys:
       - date
