--- a/settings.yaml
+++ b/settings.yaml
@@ -1,3 +1,49 @@
+# ============================================================================
+# Tushare 数据配置文件 - 统一配置规范（2026.01.05 重构版）
+# ============================================================================
+#
+# 【核心参数说明】
+#
+# date_param_mode: 控制如何向 API 传递日期参数（核心配置项）
+#   - 'single'       : 逐日获取，API 调用时传递单个日期（默认值）
+#                      适用于大多数日频表，如 daily、margin、moneyflow
+#   - 'range'        : 范围获取，传递 start_date + end_date
+#                      适用于支持日期范围查询的 API，如 shibor、index_weight
+#   - 'full_paging'  : 智能增量分页，不传日期参数，通过分页遍历全量数据
+#                      适用于基础信息表，如 opt_basic
+#
+# requires_date: 是否需要日期参数（布尔值）
+#   - true (默认)   : API 调用需要日期参数
+#   - false         : 快照表/基础信息表，无需日期参数（如 stock_basic）
+#
+# date_type: 日期类型（决定如何生成日期列表）
+#   - 'trade'  (默认): 交易日（需查询 trade_cal 表）
+#   - 'natural'      : 自然日（如海外数据、利率数据）
+#
+# date_column: 数据库中的日期列名（如 trade_date、ann_date、month）
+#
+# date_param: API 调用时的日期参数名（默认为 date_column 的值）
+#   - 如 trade_date、nav_date、period 等
+#
+# start_param / end_param: 仅在 date_param_mode='range' 时使用
+#   - 默认值: start_date / end_date
+#   - 月度表特例: start_m / end_m（如 cn_pmi、cn_m）
+#
+# api_date_format: API 期望的日期格式
+#   - 'YYYYMMDD'     : 默认格式
+#   - 'YYYY-MM-DD'   : 部分接口需要（如 cb_share）
+#   - 'YYYYMM'       : 月度数据（如 cn_pmi）
+#
+# 【已废弃的参数】以下参数已不再使用，请勿添加：
+#   - is_daily          : 已由 date_param_mode 替代
+#   - force_daily       : 已由 date_param_mode='single' 替代
+#   - force_daily_fetch : 已由 date_param_mode='single' 替代
+#   - fetch_by_date_range: 已由 date_param_mode='range' 替代
+#   - display_as_daily  : 已废弃
+#   - param_name        : 请使用 date_param
+#
+# ============================================================================
+
 stock_list:
   db_path: ${DB_ROOT}/tushare_duck_basic.db
   list_exchange: SSE
@@ -33,8 +79,6 @@ stock_list:
         - L
         - D
         - P
-      is_daily: false
-      date_param_mode: range
       statistics_queries:
         - label: "股票上市状态分布"
           query: "SELECT list_status, count(*) as count FROM stock_basic GROUP BY 1"
@@ -79,8 +123,6 @@ stock_list:
         exchange:
         - SSE
         - SZSE
-      is_daily: false
-      date_param_mode: range
       statistics_queries:
         - label: "各交易所上市公司分布"
           query: "SELECT exchange, count(*) FROM stock_company GROUP BY 1"
@@ -108,7 +150,6 @@ stock_events:
       date_column: ann_date
       limit: 10000
       requires_paging: true
-      is_daily: false
       date_param_mode: range
     hs_const:
       fields:
@@ -129,7 +170,6 @@ stock_events:
         hs_type:
         - SH
         - SZ
-      is_daily: false
       date_param_mode: range
     stk_managers:
       fields:
@@ -155,7 +195,6 @@ stock_events:
       requires_date: true
       limit: 4000
       requires_paging: true
-      is_daily: false
       date_param_mode: range
     stk_rewards:
       fields:
@@ -177,7 +216,6 @@ stock_events:
       requires_paging: true
       required_params:
       - ts_code
-      is_daily: false
       date_param_mode: range
     trade_cal:
       fields:
@@ -201,7 +239,6 @@ stock_events:
         - SZSE
         - SSE
       date_column: cal_date
-      is_daily: false
       date_type: natural
       date_param_mode: range
 stock:
@@ -394,7 +431,6 @@ margin:
       - exchange_id
       date_column: trade_date
       date_type: trade
-      is_daily: true
     margin_detail:
       fields:
       - trade_date
@@ -415,7 +451,6 @@ margin:
       - trade_date
       date_column: trade_date
       date_type: trade
-      is_daily: true
     margin_secs:
       fields:
       - trade_date
@@ -430,7 +465,6 @@ margin:
       - ts_code
       date_column: trade_date
       date_type: trade
-      is_daily: true
     slb_len:
       fields:
       - trade_date
@@ -446,7 +480,6 @@ margin:
       - trade_date
       date_column: trade_date
       date_type: trade
-      is_daily: true
     slb_len_mm:
       fields:
       - trade_date
@@ -464,7 +497,6 @@ margin:
       - ts_code
       date_column: trade_date
       date_type: trade
-      is_daily: true
     slb_sec:
       fields:
       - trade_date
@@ -482,7 +514,6 @@ margin:
       - ts_code
       date_column: trade_date
       date_type: trade
-      is_daily: true
     slb_sec_detail:
       fields:
       - trade_date
@@ -499,7 +530,6 @@ margin:
       - ts_code
       date_column: trade_date
       date_type: trade
-      is_daily: true
 moneyflow:
   db_path: ${DB_ROOT}/tushare_duck_moneyflow.db
   tables:
@@ -533,7 +563,6 @@ moneyflow:
       - trade_date
       date_column: trade_date
       date_type: trade
-      is_daily: true
     moneyflow_ths:
       fields:
       - trade_date
@@ -557,7 +586,6 @@ moneyflow:
       - trade_date
       date_column: trade_date
       date_type: trade
-      is_daily: true
     moneyflow_dc:
       fields:
       - trade_date
@@ -583,7 +611,6 @@ moneyflow:
       - trade_date
       date_column: trade_date
       date_type: trade
-      is_daily: true
     moneyflow_ind_ths:
       fields:
       - trade_date
@@ -607,7 +634,6 @@ moneyflow:
       - trade_date
       date_column: trade_date
       date_type: trade
-      is_daily: true
     moneyflow_ind_dc:
       fields:
       - trade_date
@@ -636,7 +662,6 @@ moneyflow:
       - trade_date
       date_column: trade_date
       date_type: trade
-      is_daily: true
     moneyflow_mkt_dc:
       fields:
       - trade_date
@@ -662,7 +687,6 @@ moneyflow:
       - trade_date
       date_column: trade_date
       date_type: trade
-      is_daily: true
     moneyflow_cnt_ths:
       fields:
       - trade_date
@@ -688,7 +712,6 @@ moneyflow:
       requires_paging: true
       date_column: trade_date
       date_type: trade
-      is_daily: true
 index_info:
   db_path: ${DB_ROOT}/tushare_duck_index.db
   tables:
@@ -710,7 +733,6 @@ index_info:
       limit: 8000
       earliest_date: '19900101'
       latest_date: null
-      is_daily: false
       unique_keys:
       - ts_code
       date_column: list_date
@@ -727,7 +749,6 @@ index_info:
       earliest_date: '20140101'
       latest_date: null
       src: SW2014
-      is_daily: false
       unique_keys:
       - index_code
     sw_index_classify_2021:
@@ -743,7 +764,6 @@ index_info:
       earliest_date: '20210101'
       latest_date: null
       src: SW2021
-      is_daily: false
       unique_keys:
       - index_code
     sw_index_member_all:
@@ -762,7 +782,6 @@ index_info:
       limit: 3000
       earliest_date: '19900101'
       latest_date: null
-      is_daily: false
       unique_keys:
       - ts_code
       - l3_code
@@ -780,7 +799,6 @@ index_info:
       limit: 6000
       earliest_date: '19900101'
       latest_date: null
-      is_daily: false
       unique_keys:
       - ts_code
       - con_code
@@ -794,7 +812,6 @@ index_info:
       limit: 5000
       earliest_date: '19900101'
       latest_date: null
-      is_daily: false
       unique_keys:
       - ts_code
       - con_code
@@ -810,7 +827,6 @@ index_info:
       limit: 3000
       earliest_date: '19900101'
       latest_date: null
-      is_daily: false
       unique_keys:
       - ts_code
       - con_code
@@ -827,7 +843,6 @@ index_info:
       limit: null
       earliest_date: '19900101'
       latest_date: null
-      is_daily: false
       unique_keys:
       - ts_code
       requires_paging: false
@@ -848,7 +863,6 @@ index_weight:
       - index_code
       - con_code
       - trade_date
-      is_daily: true
       date_column: trade_date
       date_param_mode: range
       requires_paging: true
@@ -945,7 +959,6 @@ index_daily:
         - 399852.SZ
       date_column: trade_date
       date_type: trade
-      is_daily: true
     index_dailybasic:
       unique_keys:
       - ts_code
@@ -984,7 +997,6 @@ index_daily:
         - 399300.SZ
         - 399905.SZ
       date_type: trade
-      is_daily: true
     daily_info:
       unique_keys:
       - trade_date
@@ -1009,7 +1021,6 @@ index_daily:
       requires_date: true
       date_column: trade_date
       date_type: trade
-      is_daily: true
     sz_daily_info:
       unique_keys:
       - trade_date
@@ -1029,7 +1040,6 @@ index_daily:
       requires_date: true
       date_column: trade_date
       date_type: trade
-      is_daily: true
     ths_daily:
       unique_keys:
       - ts_code
@@ -1053,7 +1063,6 @@ index_daily:
       requires_date: true
       date_column: trade_date
       date_type: trade
-      is_daily: true
     dc_daily:
       fields:
       - ts_code
@@ -1071,7 +1080,6 @@ index_daily:
       limit: 2000
       earliest_date: '19900101'
       latest_date: null
-      is_daily: true
       unique_keys:
       - ts_code
       - trade_date
@@ -1079,7 +1087,6 @@ index_daily:
       requires_date: true
       use_trade_dates: true
       date_column: trade_date
-      fetch_by_date_range: true
       filter_null_dates_metadata: false
       date_type: trade
     ci_daily:
@@ -1104,7 +1111,6 @@ index_daily:
       requires_date: true
       date_column: trade_date
       date_type: trade
-      is_daily: true
     sw_daily:
       unique_keys:
       - ts_code
@@ -1131,7 +1137,6 @@ index_daily:
       requires_date: true
       date_column: trade_date
       date_type: trade
-      is_daily: true
     index_global:
       unique_keys:
       - ts_code
@@ -1154,7 +1159,7 @@ index_daily:
       requires_date: true
       date_column: trade_date
       date_type: natural
-      is_daily: true
+      date_param_mode: range
     dc_index:
       fields:
       - ts_code
@@ -1171,7 +1176,6 @@ index_daily:
       limit: 5000
       earliest_date: '19900101'
       latest_date: null
-      is_daily: false
       unique_keys:
       - ts_code
       - trade_date
@@ -1193,13 +1197,11 @@ index_daily:
       limit: 1000
       earliest_date: '19900101'
       latest_date: null
-      is_daily: false
       unique_keys:
       - ts_code
       - trade_date
       requires_paging: true
       date_column: trade_date
-      force_daily: true
     tdx_daily:
       fields:
       - ts_code
@@ -1243,7 +1245,6 @@ index_daily:
       limit: 3000
       earliest_date: '19900101'
       latest_date: null
-      is_daily: true
       unique_keys:
       - ts_code
       - trade_date
@@ -1251,7 +1252,6 @@ index_daily:
       requires_date: true
       use_trade_dates: true
       date_column: trade_date
-      fetch_by_date_range: true
       filter_null_dates_metadata: false
       date_type: trade
 fund_info:
@@ -1296,7 +1296,6 @@ fund_info:
       unique_keys:
       - ts_code
       date_column: list_date
-      is_daily: false
     fund_company:
       fields:
       - name
@@ -1323,7 +1322,6 @@ fund_info:
       unique_keys:
       - name
       date_column: setup_date
-      is_daily: false
 fund:
   db_path: ${DB_ROOT}/tushare_duck_fund.db
   tables:
@@ -1448,7 +1446,6 @@ bond:
       requires_date: false
       date_column: list_date
       date_type: trade
-      date_param_mode: range
     cb_issue:
       fields:
       - ts_code
@@ -1493,8 +1490,6 @@ bond:
       - ts_code
       - ann_date
       date_column: ann_date
-      is_daily: false
-      force_daily_fetch: false
       requires_date: true
     cb_call:
       fields:
@@ -1513,14 +1508,11 @@ bond:
       earliest_date: '20200730'
       latest_date: null
       requires_date: false
-      display_as_daily: true
       requires_paging: true
       unique_keys:
       - ts_code
       - ann_date
       date_column: ann_date
-      is_daily: false
-      force_daily_fetch: false
     cb_rate:
       fields:
       - ts_code
@@ -1537,7 +1529,6 @@ bond:
       - ts_code
       - rate_start_date
       date_column: rate_start_date
-      is_daily: false
     cb_share:
       fields:
       - ts_code
@@ -1564,7 +1555,6 @@ bond:
       limit: 2000
       requires_paging: true
       date_column: publish_date
-      is_daily: true
       date_type: trade
       date_param: ann_date
       date_param_mode: range
@@ -1769,7 +1759,6 @@ future_info:
       unique_keys:
       - ts_code
       earliest_date: '19900101'
-      is_daily: false
       requires_date: false
       requires_paging: false
       limit: 1000
@@ -1808,7 +1797,6 @@ future_info:
         - SSE
       date_column: cal_date
       date_type: trade
-      is_daily: false
 future:
   db_path: ${DB_ROOT}/tushare_duck_future.db
   tables:
@@ -2226,7 +2214,6 @@ marco:
       limit: 2000
       date_column: date
       date_type: natural
-      is_daily: false
       date_param_mode: range
     us_trycr:
       unique_keys:
@@ -2242,7 +2229,6 @@ marco:
       limit: 2000
       date_column: date
       date_type: natural
-      is_daily: false
       date_param_mode: range
     us_tltr:
       unique_keys:
@@ -2255,7 +2241,6 @@ marco:
       earliest_date: '20070101'
       limit: 2000
       date_column: date
-      is_daily: false
       date_param_mode: range
     us_trltr:
       unique_keys:
@@ -2267,7 +2252,6 @@ marco:
       limit: 2000
       date_column: date
       date_type: natural
-      is_daily: false
       date_param_mode: range
     us_tbr:
       unique_keys:
@@ -2290,7 +2274,6 @@ marco:
       limit: 2000
       date_column: date
       date_type: natural
-      is_daily: false
       date_param_mode: range
 finance:
   db_path: ${DB_ROOT}/tushare_duck_finance.db
@@ -2574,7 +2557,7 @@ finance:
       - f_ann_date
       - end_date
       - update_flag
-      param_name: period
+      date_param: period
     cashflow:
       api_table: cashflow_vip
       table_name: cashflow
@@ -2685,7 +2668,7 @@ finance:
       - f_ann_date
       - end_date
       - update_flag
-      param_name: period
+      date_param: period
     fina_indicator:
       api_table: fina_indicator_vip
       table_name: fina_indicator
@@ -2694,7 +2677,7 @@ finance:
       - ann_date
       - end_date
       - update_flag
-      param_name: period
+      date_param: period
       date_column: end_date
       limit: 12000
       is_full: false
@@ -3025,4 +3008,7 @@ finance:
       - pre_date
       - actual_date
       - modify_date
+      unique_keys:
+      - ts_code
+      - end_date
       date_param: end_date
